navbar-menu spacing fixes

--- a/cookiecutter_mbam/assets/scss/style.scss
+++ b/cookiecutter_mbam/assets/scss/style.scss
@@ -33,14 +33,14 @@ header[role="nav-menu"] {
 	list-style-type: none;
     margin: 0;
     padding: 0;
+    font-weight: 500;
+    letter-spacing: 1px;
 	.nav-item {
 	  	float: left;
 	  	a {
 	  		display: block;
 			color: white;
-			text-align: center;
-			padding: 14px 16px;
-			text-decoration: none;
+			padding: 5px 20px;
 	  	}
 	}
 }
